Fix alignement
middle > sub

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -530,7 +530,7 @@ input[type=radio],
     }
 
     .ds44-iconInnerText{
-      vertical-align: middle;
+      vertical-align: sub;
     }
 }
 
